Fix HTML layout problems and add functionality to search filter

--- a/src/App.css
+++ b/src/App.css
@@ -40,14 +40,39 @@ input[type="color"]:focus,
  * Base structure
  */
 
+html {
+  margin: 0;
+  height: 100%;
+  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
+  /* min-height: 100%; */
+}
+
 body {
+  margin: 0;
+  /* min-height: 100% !important; */
+  height: 100%;
   background-color: #BC002D;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
+}
+
+.testing {
+  /* min-height: 100%; */
+  height: auto;
+  /* height: 1000px; */
+  /* background-color: blue; */
+  /* height: auto !important; */
+  /* margin: 0 auto -20px; */
 }
 
 body, p, h1 {
   color: #FCD116;
   text-shadow: 0.05rem .05rem 0 #3F3405;
+}
+
+main {
+  min-height: 100% !important;
+  height: 100%;
+  height: auto !important;
 }
 
 .input-group button {
@@ -61,6 +86,10 @@ body, p, h1 {
 
 .cover-container {
   max-width: 60em;
+}
+
+.content {
+  margin-top: 5%;
 }
 
 
@@ -116,6 +145,23 @@ body, p, h1 {
   color: #FCD116;
 }
 
+
+
+/*
+* Main content
+*/
+
+main h1 {
+  text-align: center;
+}
+
+main p {
+  text-align: center;
+}
+
+#root {
+  margin-top: 50px;
+}
 
 
 .input-group #searchBtn {
@@ -237,4 +283,15 @@ body, p, h1 {
 
 .dropdown-menu p {
   color: #FCD116;
+}
+
+
+/*
+* Footer
+*/
+footer {
+  /* position: absolute; */
+  /* bottom: 0; */
+  /* width: 100%; */
+  /* height: 2.5rem; */
 }
